@@ -1,3 +1,7 @@
+2016-04-02  Rob Savoye  <rob.savoye@linaro.org>
+
+	* contrib/sum2junit.sh: New.
+
 2016-04-01  Ben Elliston  <bje@gnu.org>
 
 	* doc/dejagnu.texi (connprocs): Document new SSH procs.
